--- a/index.html
+++ b/index.html
@@ -5,15 +5,77 @@
   <title>Google Sheet Search + Preview</title>
   <!-- ✅ Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light py-4">
 
-  <div class="container">
+  <style>
+    .hero-header {
+      position: relative;
+      height: 300px;
+      background-image: url('https://images.unsplash.com/photo-1557682224-5b8590cd9ec5'); /* Change to your image URL */
+      background-size: cover;
+      background-position: center;
+    }
+  
+    .hero-header .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4); /* Darken mask */
+      z-index: 0;
+    }
+  
+    .hero-header .z-1 {
+      z-index: 1;
+    }
+  </style>  
+</head>
+<body class="bg-light">
+
+  <!-- 🌄 Hero Header with BG and Overlay -->
+  <header class="hero-header d-flex align-items-center justify-content-center text-white text-center">
+    <div class="overlay"></div>
+    <div class="position-relative z-1">
+      <h1 class="display-4 fw-bold">LHTĐ SSM LVQ 2025</h1>
+      <p class="lead">Chuyển nhà lên NTĐ</p>
+    </div>
+  </header>
+
+  <div class="container py-5 mt-5">
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-header bg-warning text-black">
+              <h4 class="mb-0 text-center">Thời Gian Còn Lại Của Lễ Hội</h4>
+          </div>
+          <div class="card-body">
+            <div class="row text-center">
+              <div class="col-3">
+                <h3 id="days" class="display-4">00</h3>
+                <p>Days</p>
+              </div>
+              <div class="col-3">
+                <h3 id="hours" class="display-4">00</h3>
+                <p>Hours</p>
+              </div>
+              <div class="col-3">
+                <h3 id="minutes" class="display-4">00</h3>
+                <p>Minutes</p>
+              </div>
+              <div class="col-3">
+                <h3 id="seconds" class="display-4">00</h3>
+                <p>Seconds</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <h2 class="mb-4">Tìm Thông Tin Lễ Hội Của Bạn</h2>
 
     <div class="input-group mb-4">
       <input type="text" id="searchInput" class="form-control" placeholder="Nhập MSSS">
-      <button class="btn btn-primary" onclick="searchSheet()">Search</button>
+      <button class="btn btn-dark" onclick="searchSheet()">Search</button>
     </div>
 
     <div class="mb-5">
@@ -22,7 +84,7 @@
     </div>
 
     <div>
-      <h4>Bảng Xếp Hạng Top 10 Lễ Hội</h4>
+      <h4 class="mb-3">Bảng Xếp Hạng Top 10 Lễ Hội</h4>
       <div id="preview" class="table-responsive"></div>
     </div>
 
@@ -31,8 +93,9 @@
   <script>
     const previewSheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSrMx-khH_5EfH2N1FsxU5RLtVQx_nPUuxOvBwyprYSSLUEr3JU4rPdwEg-UQz_-XC3FVPT1ogp6Fcp/pub?gid=1226702362&single=true&output=tsv';
     const searchSheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSrMx-khH_5EfH2N1FsxU5RLtVQx_nPUuxOvBwyprYSSLUEr3JU4rPdwEg-UQz_-XC3FVPT1ogp6Fcp/pub?gid=1526475251&single=true&output=tsv';
-
     const columnToSearch = 2;
+
+    const countDownDate = new Date("April 30, 2025 23:59:59").getTime();
 
     async function fetchTSVData(url) {
       const res = await fetch(url);
@@ -46,7 +109,7 @@
         return;
       }
 
-      let table = '<table class="table table-bordered table-striped table-hover"><thead><tr>';
+      let table = '<table class="table table-bordered table-hover table-striped"><thead class="table-success"><tr>';
       data[0].forEach(header => table += `<th>${header}</th>`);
       table += '</tr></thead><tbody>';
 
@@ -79,6 +142,36 @@
         document.getElementById('results').innerHTML = '<p class="text-warning">No match found.</p>';
       }
     }
+
+    // Update the countdown every 1 second
+    const x = setInterval(function() {
+      // Get today's date and time
+      const now = new Date().getTime();
+
+      // Find the distance between now and the countdown date
+      const distance = countDownDate - now;
+
+      // Time calculations for days, hours, minutes and seconds
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      // Display the result
+      document.getElementById("days").innerHTML = days.toString().padStart(2, '0');
+      document.getElementById("hours").innerHTML = hours.toString().padStart(2, '0');
+      document.getElementById("minutes").innerHTML = minutes.toString().padStart(2, '0');
+      document.getElementById("seconds").innerHTML = seconds.toString().padStart(2, '0');
+
+      // If the countdown is finished, write some text
+      if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("days").innerHTML = "00";
+        document.getElementById("hours").innerHTML = "00";
+        document.getElementById("minutes").innerHTML = "00";
+        document.getElementById("seconds").innerHTML = "00";
+      }
+    }, 1000);
 
     window.onload = init;
   </script>
