header color change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
 
     .gradient-text {
-      background: linear-gradient(180deg, red, dodgerblue);
+      background: linear-gradient(180deg, yellowgreen, dodgerblue);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
