--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
       <div class="col-md-8">
         <div class="card">
           <div class="card-header bg-warning text-black">
-              <h4 class="mb-0 text-center">Thời Gian Còn Lại Của Lễ Hội</h4>
+              <h4 class="mb-0 text-center">Thời Gian LHTĐ Còn Lại</h4>
           </div>
           <div class="card-body">
             <div class="row text-center">
               <div class="col-3">
                 <h3 id="days" class="display-4">00</h3>
-                <p>Days</p>
+                <p>Ngày</p>
               </div>
               <div class="col-3">
                 <h3 id="hours" class="display-4">00</h3>
-                <p>Hours</p>
+                <p>Giờ</p>
               </div>
               <div class="col-3">
                 <h3 id="minutes" class="display-4">00</h3>
-                <p>Minutes</p>
+                <p>Phút</p>
               </div>
               <div class="col-3">
                 <h3 id="seconds" class="display-4">00</h3>
-                <p>Seconds</p>
+                <p>Giây</p>
               </div>
             </div>
           </div>
@@ -116,11 +116,11 @@
       </div>
     </div>
 
-    <h4 class="mb-4" data-aos="fade-up">Tìm Thông Tin Lễ Hội Của Bạn</h4>
+    <h4 class="mb-4" data-aos="fade-up">Tìm thông tin LHTĐ của ace</h4>
 
     <div class="input-group mb-4" data-aos="fade-up" data-aos-delay="200">
       <input type="text" id="searchInput" class="form-control" placeholder="Nhập MSSS">
-      <button class="btn btn-dark" onclick="searchSheet()">Search</button>
+      <button class="btn btn-dark" onclick="searchSheet()">Tìm kiếm</button>
     </div>
 
     <div class="mb-5">
@@ -129,7 +129,7 @@
     </div>
 
     <div data-aos="fade-up">
-      <h2 class="mb-4">Bảng Xếp Hạng Top 10 Lễ Hội</h2>
+      <h2 class="mb-4">Bảng Xếp Hạng Top 10 LHTĐ</h2>
       <div id="preview" class="table-responsive"></div>
     </div>
 
